--- a/values.yaml
+++ b/values.yaml
@@ -1,6 +1,7 @@
 cronJob:
   image: registry.redhat.io/openshift4/ose-cli:v4.10
   schedule: "*/1 * * * *"
+  serviceAccount: default
   script: |
     #!/bin/bash
     echo 'Hello World!'
