--- a/values.yaml
+++ b/values.yaml
@@ -1,5 +1,5 @@
 cronJob:
-  image: registry.redhat.io/openshift4/ose-cli:v4.10
+  image: registry.access.redhat.com/ubi8:latest
   schedule: "*/1 * * * *"
   serviceAccount: default
   script: |
