--- a/Chart.yaml
+++ b/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v2
 name: cronjob
-description: Easy CronJobs for Kubernetes
+description: Dead simple CronJobs for Kubernetes
 type: application
-version: 0.0.1
+version: 1.0.0
